# ROB320

Lab1/: Makefile  c_oop.c  callback.c  cpp_oop.cpp  dec_to_hex.c  memory_layout.c  packed.c  padded.c
Lab2/: chat.c  log.c  messages.h  util.h
Lab3/: matmul.cpp  path_planning.cpp  thread_pool.hpp
Lab4/: Makefile  group_anagrams.cpp  moving_average.cpp  relative_ranks.cpp  two_sum.cpp  valid_parentheses.cpp
Lab5/: CMakeLists.txt  routines.cpp  routines.hpp  test_routines.cpp  test_transforms.cpp  transforms.cpp  transforms.hpp
Lab6/: robot_parser.hpp  simple_parser.hpp
Lab7/: gradient_descent_client.cpp  gradient_descent_service.cpp
Lab7/Lab7/: CMakeLists.txt
Lab7/Lab7/include/msg/: GradientDescentRequest.hpp
Lab7/Lab7/include/rix/core/service/: service_callback.hpp
Lab7/Lab7/include/rix/core/service_client/: srv_client_impl_base.hpp  srv_client_impl_web.hpp
Lab7/Lab7/include/rix/core/subscriber/: subscriber.hpp
Lab7/Lab7/include/rix/ipc/: connection.hpp  server.hpp
Lab7/Lab7/include/rix/msg/geometry/: Transform.hpp  TransformStamped.hpp
Lab7/Lab7/include/rix/msg/mediator/: ActInfo.hpp  Hash.hpp  Operation.hpp  SrvInfo.hpp
Lab7/Lab7/include/rix/msg/sensor/: JS.hpp
Lab7/Lab7/include/rix/msg/standard/: String.hpp
Lab7/Lab7/include/rix/rdf/: fk_solver.hpp
Lab7/Lab7/include/rix/util/: cl_parser.hpp
Lab7/include/msg/: GradientDescentResponse.hpp
Lab7/include/rix/core/: node.hpp  publisher.hpp  service.hpp  subscriber.hpp
Lab7/include/rix/core/impl/: node_impl.hpp
Lab7/include/rix/core/publisher/: pub_impl_mock.hpp  pub_impl_tcp.hpp
Lab7/include/rix/core/service/: service_callback_base.hpp  srv_callback.hpp  srv_callback_base.hpp  srv_impl_base.hpp  srv_impl_web.hpp
Lab7/include/rix/core/subscriber/: sub_callback.hpp  (+1 more)
Lab7/include/rix/ipc/: client.hpp  executor.hpp  fifo.hpp  file.hpp  peer.hpp  socket.hpp
Lab7/include/rix/rdf/: tree.hpp  util.hpp
Lab7/include/rix/util/: log.hpp  timing.hpp
Project1/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  cmd_parser  cmd_receiver  drive_square  teleop
Project1/src/: cmd_parser.c  cmd_receiver.c  drive_square.c  teleop.c  util.c
Project3/: ._CMakeLists.txt  ._ag_files.txt  CMakeLists.txt  ag_files.txt  collect_files.sh
Project3/include/rix/ipc/: client.hpp  server.hpp  uri.hpp
Project3/include/rix/msg/: common.hpp
Project3/include/rix/msg/component/: ComponentInfo.hpp  ID.hpp  Info.hpp  MessageInfo.hpp  URI.hpp
Project3/include/rix/msg/mbot/: Encoders.hpp  IMU.hpp  LidarScan.hpp  MotorPWM.hpp  MotorVelocity.hpp  OccupancyGrid.hpp  Particle.hpp  Particles.hpp  Path2D.hpp  PlannerRequest.hpp  Pose2D.hpp  SLAMReset.hpp  SLAMStatus.hpp  Timestamp.hpp  Twist2D.hpp
Project3/include/rix/msg/standard/: Header.hpp  String.hpp  Time.hpp
Project3/include/rix/util/: cl_parser.hpp  logger.hpp  signal_handler.hpp
Project3/lidar_driver/include/: lidar.hpp
Project3/lidar_driver/src/: lidar.cpp  lidar_driver.cpp
Project3/mbot_driver/include/: mbot.hpp
Project3/mbot_driver/src/: mbot.cpp  mbot_driver.cpp
Project3/rix/include/rix/core/: common.hpp  node.hpp  subscriber.hpp
Project3/rix/include/rix/core/publisher/: pub_impl_base.hpp  pub_impl_tcp.hpp  publisher.hpp
Project3/rix/include/rix/core/subscriber/: sub_impl_base.hpp  sub_impl_tcp.hpp  subscriber.hpp  subscriber_callback.hpp  subscriber_callback_base.hpp
Project3/rix/src/rix/core/: node.cpp
Project3/rix/src/rix/core/publisher/: pub_impl_base.cpp  pub_impl_tcp.cpp  publisher.cpp
Project3/rix/src/rix/core/subscriber/: sub_impl_base.cpp  sub_impl_tcp.cpp  subscriber.cpp
Project3/rixhub/include/: ledger.hpp  mediator.hpp
Project3/rixhub/src/: ledger.cpp  mediator.cpp  rixhub.cpp
Project3/rplidar_sdk/: ._LICENSE
Project3/rplidar_sdk/workspaces/vc14/ultra_simple/: ._ultra_simple.vcxproj.filters
Project3/src/: lidar_listener.cpp  listener.cpp  odometry_listener.cpp  slam_pose_listener.cpp  talker.cpp  teleop_keyboard.cpp  timesync.cpp
Project4/: CMakeLists.txt
Project4/include/rix/core/: service_client.hpp
Project4/include/rix/core/publisher/: pub_impl_base.hpp
Project4/include/rix/core/service/: srv_impl_tcp.hpp
Project4/include/rix/core/service_client/: srv_cli_impl_tcp.hpp  srv_client_impl_tcp.hpp
Project4/include/rix/core/subscriber/: sub_impl_tcp.hpp
Project4/include/rix/ipc/: async.hpp  signal_handler.hpp
Project4/include/rix/msg/geometry/: Point.hpp  TwistStamped.hpp
Project4/include/rix/msg/mediator/: ActRequest.hpp
Project4/include/rix/msg/sensor/: JointState.hpp
Project4/include/rix/msg/standard/: UInt32.hpp
Project4/include/rix/rdf/: fk_solver.hpp  link.hpp
Project4/robots/: simple_bot.json
Project4/src/: jsp.cpp  rsp.cpp
Project4/src/rix/rdf/: fk_solver.cpp  joint.cpp  link.cpp  tree.cpp  util.cpp
Project4/test/manual_tests/: compare_jsp_test.cpp  compare_rsp_test.cpp  joint_publisher.cpp  js_listener.cpp  js_recorder.cpp  jsp_simulator.cpp  tf_listener.cpp  tf_recorder.cpp
Project4/test/unit_tests/: fk_solver_test.cpp  joint_test.cpp  tree_test.cpp
Project5/: CMakeLists.txt  submit.sh
Project5/include/: ik_solver.hpp
Project5/include/rix/core/: common.hpp
Project5/include/rix/core/publisher/: publisher.hpp
Project5/include/rix/core/service/: service.hpp  srv_callback.hpp
Project5/include/rix/core/service_client/: service_client.hpp
Project5/include/rix/core/subscriber/: sub_callback_base.hpp
Project5/include/rix/ipc/: endpoint.hpp  errno.hpp  flags.hpp
Project5/include/rix/msg/: message_base.hpp
Project5/include/rix/msg/geometry/: PoseStamped.hpp  Quaternion.hpp  Twist.hpp
Project5/include/rix/msg/iksrv/: IKRequest.hpp  IKResponse.hpp
Project5/include/rix/msg/mediator/: PubNotify.hpp  Status.hpp  TopicInfo.hpp
Project5/include/rix/msg/standard/: Time.hpp
Project5/include/rix/rdf/: fk_solver.hpp  joint.hpp
Project5/include/rix/util/: log.hpp
Project5/robots/: RRP.json
Project5/src/: ik_solver.cpp  iksrv.cpp
Project5/test/include/: tests.hpp
Project5/test/manual_tests/: test_iksrv.cpp
Project5/test/unit_tests/: test_ik_solver.cpp
(+18 files in other folders)
